tests/error/modifier_errors/higher_order_controllable_missing_flag.err
Error: Unitary flag mismatch (at $FILE:17:18)
   | 
15 | @guppy
16 | def test(q: qubit) -> None:
17 |     apply_control(dagger_only, q)
   |                   ^^^^^^^^^^^ Expected function with unitary flags: `control`, got:
   |                               `dagger`

Guppy compilation failed due to 1 previous error
